--- a/Django-React/frontend/static/css/base/_globals.scss
+++ b/Django-React/frontend/static/css/base/_globals.scss
@@ -616,7 +616,6 @@ input {
 }
 
 #land {
-    overflow: auto;
     height: 100%;
     padding: 1rem;
 }
