--- a/Django-React/frontend/static/css/style.css
+++ b/Django-React/frontend/static/css/style.css
@@ -873,7 +873,6 @@ input {
 }
 
 #land {
-  overflow: auto;
   height: 100%;
   padding: 1rem;
 }
@@ -1129,7 +1128,6 @@ input {
 .header__search {
   position: absolute;
   left: 2rem;
-  z-index: 4;
 }
 
 .header__search__opener {
@@ -1166,14 +1164,6 @@ input {
   .header__search__input {
     opacity: 0;
     visibility: hidden;
-    position: fixed;
-    -webkit-transform: translate(-50%);
-            transform: translate(-50%);
-    left: 50%;
-    top: 10%;
-    height: 4.125rem;
-    font-size: 1.6rem;
-    background: rgba(0, 0, 0, 0.35);
   }
 }
 
